# MemWal

./: .env.example  .gitignore  2026-04-29_memwal-code-review.md  2026-04-29_memwal-fix-plan.md  2026-04-29_memwal-lessons.md  ARCHITECTURE_ACTION_PLAN.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_SUMMARY.md  ARCHITECTURE_REVIEW_VISUAL.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  DEMO_SCRIPT.md  Dockerfile  FINAL_STATUS.md  FOR_SDK_AUTHOR.md  GIT_PUSH_INSTRUCTIONS.md  INTEGRATION_STATUS.md  PATCH_APPLIED.md  PATCH_SITUATION.md  PDW_INTEGRATION_SUMMARY.md  QUICK_START.md  QUICK_TEST.md  RAILWAY_DEPLOYMENT.md  README.md  README_PDW_INTEGRATION.md  RESTART_INSTRUCTIONS.md  REVIEW_SUMMARY.md  SDK_BUG_REPORT.md  SDK_BUG_v0.3.4.md  SKILL.md  TEST_SDK.md  benchmark-output-curl.txt  benchmark-output-from-logs.json  benchmark-output-from-logs.txt  benchmark-output-search.txt  benchmark-results-20251218-130019.json  benchmark-results-20251218-130200.json  docs.Dockerfile  flow.md  (+11 more)
services/server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
services/server/benchmarks/: .gitignore  README.md  config.example.yaml  pyproject.toml  run.py  smoke_ranker.py  watch_cost.sh
services/server/benchmarks/benchmarks/: __init__.py  base.py  convomem.py  locomo.py  longmemeval.py
services/server/benchmarks/core/: __init__.py  client.py  judge.py  metrics.py  report.py  types.py
services/server/benchmarks/presets/: baseline.yaml  default.yaml  importance_heavy.yaml  recency_heavy.yaml
services/server/benchmarks/reference_scores/: locomo.yaml  longmemeval.yaml
services/server/benchmarks/tests/: test_adapters.py  test_metrics.py
services/server/benchmarks/tests/fixtures/locomo/: locomo10.json
services/server/benchmarks/tests/fixtures/longmemeval/: longmemeval_oracle.json
services/server/deploy/nautilus/: Containerfile  Makefile  README.md  host-forwarder.sh  nautilus.toml.example  run.sh  runtime.env.example
services/server/docs/: eng-1784-staging-smoke.md
services/server/migrations/: 001_init.sql  002_add_namespace.sql  003_rate_limiter.sql  004_add_ivfflat_index.sql  004_memory_structure.sql  005_benchmark_plaintext.sql  005_remember_jobs.sql  006_bulk_remember.sql  007_collapse_wallet_queues.sql  007_memory_index_metadata.sql  008_benchmark_plaintext.sql  009_importance_signal.sql  010_app_auth_clients.sql  010_blob_end_epoch.sql
services/server/review/: README.md  memory-redesign-breakdown.md
services/server/review/assessment/: benchmark-design.md  benchmark-mode-code-review.md  memory-structure-upgrade-assessment.md  p0-blocker-2-analysis.md
services/server/review/assessment/benchmark-runs/: README.md
services/server/review/assessment/benchmark-runs/2026-04-20-locomo/: README.md  detailed-report.md  root-cause.md  summary.md
services/server/review/assessment/benchmark-runs/2026-04-20-longmemeval/: README.md  detailed-report.md  summary.md
services/server/review/assessment/benchmark-runs/2026-04-21-locomo/: README.md  detailed-report.md  root-cause.md  summary.md
services/server/review/assessment/benchmark-runs/2026-04-23-longmemeval-chrono/: README.md
services/server/review/mem0-research/: 00-index.md  01-memory-structure.md  02-context-management.md  03-memory-operations.md  04-deduplication-conflict.md  05-retrieval.md  06-component-interactions.md
services/server/review/memwal-architecture-review/: 00-index.md  01-architecture-overview.md  02-code-review.md  03-mem0-alignment.md  04-gap-analysis.md  05-external-evaluation.md  06-features-and-quality.md  07-issues-and-actions.md
services/server/scripts/: backfill-end-epoch.ts  bench-recall-latency.ts  bench-remember-sizes.ts  bench-sidecar-concurrency.ts  bench-walrus-concurrency.ts  get-bench-ciphertext.ts  package-lock.json  package.json  seal-config.ts  seal-decrypt.ts  seal-encrypt.ts  sidecar-server.ts  tsconfig.json  walm52-tip-metrics.ts  walrus-error-detection.ts  walrus-tip-audit.ts  walrus-upload.ts
services/server/scripts/__tests__/: seal-config.test.ts  walm52-tip-metrics.test.ts  walrus-blob-object-effects.test.ts  walrus-object-lock.test.ts  walrus-referenced-object-stale.test.ts  walrus-tip-audit.test.ts  walrus-version-mismatch.test.ts
services/server/scripts/k6/: k6.d.ts  relayer.ts
services/server/scripts/mcp/: auth.ts  index.ts  logger.ts  rateLimit.ts  server.ts
services/server/scripts/mcp/__tests__/: integration.test.ts  rateLimit.test.ts
services/server/scripts/mcp/tools/: analyze.ts  index.ts  recall.ts  remember.ts  restore.ts  util.ts
services/server/src/: alerts.rs  auth.rs  compatibility.rs  db.rs  enoki.rs  jobs.rs  main.rs  mcp_proxy.rs  memory_artifact.rs  observability.rs  rate_limit.rs  routes.rs  seal.rs  seal_keyserver.rs  slack.rs  sui.rs  types.rs  walrus.rs  walrus_onchain.rs  walrus_publisher.rs
services/server/src/engine/: mod.rs  plaintext.rs  walrus_seal.rs
services/server/src/routes/: admin.rs  analyze.rs  app_auth.rs  mod.rs  recall.rs  remember.rs  sponsor.rs
services/server/src/services/: consolidator.rs  embedder.rs  extractor.rs  llm_chat.rs  mod.rs  ranker.rs
services/server/src/services/prompts/: ask.txt  critique.txt  extract.txt
services/server/src/storage/: db.rs  mod.rs  seal.rs  sui.rs  walrus.rs
services/server/tests/: e2e_test.py  live_remember_terminal_state_check.py  test_rate_limit_redis.py  test_sponsor_flow.py  test_sponsor_rate_limit.py
(+718 files in other folders)
