[project]
name = "memwal-benchmarks"
version = "0.1.0"
description = "Retrieval quality benchmarks for Walrus Memory"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.18",       # HuggingFace dataset loading (LOCOMO)
    "huggingface_hub>=0.20",# hf_hub_download for the LongMemEval oracle —
                            # imported directly in benchmarks/longmemeval.py
                            # (also a transitive dep of datasets; declared
                            # here because we import it explicitly)
    "openai>=1.30",         # LLM judge + answer generation
    "httpx>=0.27",          # async HTTP client for Walrus Memory API
    "pynacl>=1.5",          # Ed25519 signing
    "numpy>=1.26",          # metric computation
    "pyyaml>=6.0",          # config parsing
    "tabulate>=0.9",        # terminal table formatting
    "tqdm>=4.66",           # progress bars
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
